# -*- makefile -*-
#
# Copyright (c) 2001-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# Copyright (c) 1998-2001 University of Notre Dame. 
#                         All rights reserved.
# Copyright (c) 1994-1998 The Ohio State University.  
#                         All rights reserved.
# 
# This file is part of the LAM/MPI software package.  For license
# information, see the LICENSE file in the top level directory of the
# LAM/MPI source distribution.
#
# $Id: Makefile.am,v 1.31 2003/11/15 12:43:51 jsquyres Exp $
#

include $(top_srcdir)/config/Makefile.options

# This file is only here so that "make dist" grabs all the extra
# config-level files that are necessary to build a LAM distribution
# tarball.  Nothing gets built in this directory.

EXTRA_DIST		= depcomp Makefile.options get_lam_version

# NOTE: We no longer include all the .m4 files required to create
# LAM's configure scripts.  IF you want these files, please get a
# source code repository checkout; these files are intended for
# developers only.  See http://www.lam-mpi.org/svn/.
